--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,7 +102,10 @@ substitutions = [
     {pattern = '@@', replacement = '@'},
 ]
 
-[tool.pdm.dev-dependencies]
+[dependency-groups]
+dev = [
+    "email-validator>=2.0.0",
+]
 docs = [
     "autoflake",
     "mkdocs",
@@ -134,8 +137,7 @@ testing = [
     "pytest-examples",
     "faker>=18.13.0",
     "pytest-benchmark>=4.0.0",
-    # TODO: remove bound once pytest-codspeed supports 3.13, blocked by `python-cffi`
-    "pytest-codspeed~=2.2.0; python_version < '3.13'",
+    "pytest-codspeed>=2.2.1",
     "packaging>=23.2",
     "jsonschema>=4.23.0",
 ]
@@ -144,8 +146,7 @@ testing-extra = [
     "ansi2html",
     "devtools",
     # used in docs tests
-    # TODO: remove bound once sqlalchemy supports 3.13
-    "sqlalchemy>=2.0,<3.0; python_version < '3.13'",
+    "sqlalchemy>=2.0",
     "greenlet>=3.0.0rc3; python_version < '3.13'",
 ]
 mypy = [
@@ -154,6 +155,15 @@ mypy = [
 ]
 # TODO: remove once memray supports 3.13
 memray = ["pytest-memray; python_version < '3.13' and platform_system != 'Windows'"]
+
+all = [
+  { include-group = "docs" },
+  { include-group = "linting" },
+  { include-group = "testing" },
+  { include-group = "testing-extra" },
+  { include-group = "mypy" },
+  { include-group = "memray" },
+]
 
 [tool.pytest.ini_options]
 testpaths = 'tests'
@@ -175,6 +185,9 @@ addopts = [
 markers = [
     'skip_json_schema_validation: Disable JSON Schema validation.',
 ]
+
+[tool.uv]
+default-groups = ["dev"]
 
 # configuring https://github.com/pydantic/hooky
 [tool.hooky]
@@ -260,7 +273,7 @@ strict = ['tests/test_pipeline.py']
 enableExperimentalFeatures = true
 
 [tool.codespell]
-skip = '.git,env*,pydantic/v1/*'
+skip = '.git,env*,pydantic/v1/*,uv.lock'
 # `ser` - abbreviation for "ser"ialisation
 # `crate` - a rust crate
 ignore-words-list = 'gir,ser,crate'
