--- a/.github/workflows/docs-update.yml
+++ b/.github/workflows/docs-update.yml
@@ -71,7 +71,7 @@ jobs:
       - name: install
         run: |
           uv sync --python 3.12 --group docs
-          uv run python -m pip install --extra-index-url https://pydantic:${PPPR_TOKEN}@pppr.pydantic.dev/simple/ mkdocs-material
+          uv pip install --default-index https://pydantic:${PPPR_TOKEN}@pppr.pydantic.dev/simple/ mkdocs-material
         env:
           PPPR_TOKEN: ${{ secrets.PPPR_TOKEN }}
 
