--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,9 +48,9 @@ classifiers = [
 ]
 requires-python = '>=3.8'
 dependencies = [
-    "typing-extensions>=4.12.2",
-    "annotated-types>=0.6.0",
-    "pydantic-core==2.26.0",
+    'typing-extensions>=4.12.2',
+    'annotated-types>=0.6.0',
+    'pydantic-core==2.26.0',
 ]
 dynamic = ['version', 'readme']
 
@@ -104,7 +104,21 @@ substitutions = [
 
 [dependency-groups]
 dev = [
-    "email-validator>=2.0.0",
+    "coverage[toml]",
+    "pytz",
+    "dirty-equals",
+    "eval-type-backport",
+    "pytest",
+    "pytest-mock",
+    "pytest-pretty",
+    "pytest-examples",
+    # TODO remove python version constraint once memray supports 3.13
+    "pytest-memray; python_version < '3.13' and platform_system != 'Windows'",
+    "faker",
+    "pytest-benchmark",
+    "pytest-codspeed",
+    "packaging",
+    "jsonschema",
 ]
 docs = [
     "autoflake",
@@ -116,53 +130,35 @@ docs = [
     "tomli",
     "pyupgrade",
     "mike",
-    "pytest-examples>=0.0.13",
-    "pydantic-settings>=2.0b1",
+    "pydantic-settings",
     "pydantic-extra-types @ git+https://github.com/pydantic/pydantic-extra-types.git@main",
     "requests",
 ]
 linting = [
-    "eval-type-backport>=0.1.3",
-    "ruff==0.5.6",
-]
-testing = [
-    "cloudpickle",
-    "coverage[toml]",
-    "pytz",
-    "dirty-equals",
     "eval-type-backport",
-    "pytest>=8.2.2",
-    "pytest-mock",
-    "pytest-pretty",
-    "pytest-examples",
-    "faker>=18.13.0",
-    "pytest-benchmark>=4.0.0",
-    "pytest-codspeed>=2.2.1",
-    "packaging>=23.2",
-    "jsonschema>=4.23.0",
+    "ruff",
+    "pyright==1.1.384",
 ]
 testing-extra = [
+    "cloudpickle",
     # used when generate devtools docs example
     "ansi2html",
     "devtools",
     # used in docs tests
-    "sqlalchemy>=2.0",
-    "greenlet>=3.0.0rc3; python_version < '3.13'",
+    "sqlalchemy",
+    "greenlet; python_version < '3.13'",
 ]
-mypy = [
+typechecking = [
     "mypy==1.12.1",
-    "pydantic-settings>=2.0.0",
+    "pydantic-settings",
 ]
-# TODO: remove once memray supports 3.13
-memray = ["pytest-memray; python_version < '3.13' and platform_system != 'Windows'"]
 
 all = [
+  { include-group = "dev" },
   { include-group = "docs" },
   { include-group = "linting" },
-  { include-group = "testing" },
   { include-group = "testing-extra" },
-  { include-group = "mypy" },
-  { include-group = "memray" },
+  { include-group = "typechecking" },
 ]
 
 [tool.pytest.ini_options]
