add tzdata to test deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,6 +106,7 @@ substitutions = [
 dev = [
     "coverage[toml]",
     "pytz",
+    "tzdata",
     "dirty-equals",
     "eval-type-backport",
     "pytest",
