--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   COLUMNS: 150
+  UV_FROZEN: true
 
 jobs:
   lint:
@@ -27,7 +28,7 @@ jobs:
           enable-cache: true
 
       - name: install
-        run: uv sync --frozen --python ${{ matrix.python-version }} --group linting --all-extras
+        run: uv sync --python ${{ matrix.python-version }} --group linting --all-extras
 
       - uses: pre-commit/action@v3.0.1
         with:
@@ -185,7 +186,7 @@ jobs:
           enable-cache: true
 
       - name: install deps
-        run: uv sync --frozen --python 3.12
+        run: uv sync --python 3.12
 
       - name: install example plugin
         run: uv add ./tests/plugin --no-sync
@@ -231,7 +232,7 @@ jobs:
         enable-cache: true
 
     - name: install deps
-      run: uv sync --frozen --python ${{ matrix.python-version }} --group typechecking --all-extras
+      run: uv sync --python ${{ matrix.python-version }} --group typechecking --all-extras
 
     - name: install mypy
       if: steps.cache.outputs.cache-hit != 'true'
@@ -268,7 +269,7 @@ jobs:
         enable-cache: true
 
     - name: install deps
-      run: uv sync --frozen --python 3.12 --group typechecking
+      run: uv sync --python 3.12 --group typechecking
 
     - name: install Pyright
       run: npm install -g pyright@1.1.384  # keep this in sync with .pre-commit-config.yaml
@@ -361,7 +362,7 @@ jobs:
         enable-cache: true
 
     - name: install deps
-      run: uv sync --frozen --python ${{ matrix.python-version }}
+      run: uv sync --python ${{ matrix.python-version }}
 
     - name: install typing-extensions
       run: uv pip install 'typing-extensions @ git+https://github.com/python/typing_extensions.git'
