--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,7 +189,7 @@ jobs:
         run: uv sync --python 3.12
 
       - name: install example plugin
-        run: uv add ./tests/plugin --no-sync
+        run: uv add ./tests/plugin
 
       - run: uv run pytest tests/plugin
         env:
@@ -198,7 +198,7 @@ jobs:
       # uninstalling is necessary because cache is shared with other jobs
       # which includes the plugin
       - name: uninstall example plugin
-        run: uv remove example_plugin --no-sync
+        run: uv remove example_plugin
 
   test-mypy:
     name: mypy ${{ matrix.mypy-version }} / ${{ matrix.python-version }}
