unset UV_FROZEN for test-plugin, take 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,10 +178,6 @@ jobs:
   test-plugin:
     name: test pydantic plugin
     runs-on: ubuntu-latest
-
-    env:
-      UV_FREEZE: ''
-
     steps:
       - uses: actions/checkout@v4
 
@@ -193,7 +189,7 @@ jobs:
         run: uv sync --python 3.12
 
       - name: install example plugin
-        run: uv add ./tests/plugin --no-sync
+        run: unset UV_FREEZE && uv add ./tests/plugin --no-sync
 
       - run: uv run pytest tests/plugin
         env:
@@ -202,7 +198,7 @@ jobs:
       # uninstalling is necessary because cache is shared with other jobs
       # which includes the plugin
       - name: uninstall example plugin
-        run: uv remove example_plugin --no-sync
+        run: unset UV_FREEZE && uv remove example_plugin --no-sync
 
   test-mypy:
     name: mypy ${{ matrix.mypy-version }} / ${{ matrix.python-version }}
