--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   COLUMNS: 150
+  UV_FROZEN: true
 
 jobs:
   lint:
@@ -22,13 +23,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup uv
-        uses: astral-sh/setup-uv@v3
+      - uses: astral-sh/setup-uv@v3
         with:
           enable-cache: true
 
       - name: install
-        run: uv sync --python ${{ matrix.python-version }} --group linting
+        run: uv sync --python ${{ matrix.python-version }} --group linting --all-extras
 
       - uses: pre-commit/action@v3.0.1
         with:
@@ -72,13 +72,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup uv
-        uses: astral-sh/setup-uv@v3
+      - uses: astral-sh/setup-uv@v3
         with:
           enable-cache: true
 
       - name: install deps
-        run: uv sync --python 3.12 --group testing --group testing-extra --group memray
+        run: uv sync --python 3.12 --group testing-extra
 
       - name: test
         run: uv run pytest --ignore=tests/mypy/ --ignore=tests/test_docs.py --memray
@@ -130,7 +129,7 @@ jobs:
         enable-cache: true
 
     - name: install deps
-      run: uv sync --group testing --extra timezone
+      run: uv sync
 
     - run: 'uv run python -c "import pydantic.version; print(pydantic.version.version_info())"'
 
@@ -145,7 +144,7 @@ jobs:
         CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-without-deps
 
     - name: install extra deps
-      run: uv sync --group testing --group testing-extra --extra timezone
+      run: uv sync --group testing-extra --all-extras
 
     - name: test with deps
       run: make test
@@ -182,25 +181,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup uv
-        uses: astral-sh/setup-uv@v3
-        with:
-          enable-cache: true
+      - uses: astral-sh/setup-uv@v3
 
       - name: install deps
-        run: uv sync --python 3.12 --group testing
+        run: uv sync --python 3.12
 
       - name: install example plugin
-        run: uv add ./tests/plugin --no-sync
+        run: uv pip install ./tests/plugin
 
       - run: uv run pytest tests/plugin
         env:
           TEST_PLUGIN: 1
-
-      # uninstalling is necessary because cache is shared with other jobs
-      # which includes the plugin
-      - name: uninstall example plugin
-        run: uv remove example_plugin --no-sync
 
   test-mypy:
     name: mypy ${{ matrix.mypy-version }} / ${{ matrix.python-version }}
@@ -234,7 +225,7 @@ jobs:
         enable-cache: true
 
     - name: install deps
-      run: uv sync --python ${{ matrix.python-version }} --group testing --group mypy
+      run: uv sync --python ${{ matrix.python-version }} --group typechecking --all-extras
 
     - name: install mypy
       if: steps.cache.outputs.cache-hit != 'true'
@@ -266,13 +257,12 @@ jobs:
       with:
         node-version: '20'
 
-    - name: Setup uv
-      uses: astral-sh/setup-uv@v3
+    - uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
 
     - name: install deps
-      run: uv sync --python 3.12 --group mypy
+      run: uv sync --python 3.12 --group typechecking
 
     - name: install Pyright
       run: npm install -g pyright@1.1.384  # keep this in sync with .pre-commit-config.yaml
@@ -360,13 +350,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup uv
-      uses: astral-sh/setup-uv@v3
+    - uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
 
     - name: install deps
-      run: uv sync --python ${{ matrix.python-version }} --group testing
+      run: uv sync --python ${{ matrix.python-version }}
 
     - name: install typing-extensions
       run: uv pip install 'typing-extensions @ git+https://github.com/python/typing_extensions.git'
