support `trailing-strings` with `allow_partial` (pydantic/pydantic-core#1539)
Original-commit-hash: be03c66bdb9f3a4712416a02e52e5a4d8f128b20

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,3 +109,6 @@ require_change_file = false
 [tool.pyright]
 include = ['pydantic_core', 'tests/test_typing.py']
 reportUnnecessaryTypeIgnoreComment = true
+
+[tool.inline-snapshot.shortcuts]
+fix = ["create", "fix"]
