--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ env:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    name: lint ${{ matrix.python-version }}
+    name: Lint ${{ matrix.python-version }}
     strategy:
       fail-fast: false
       matrix:
@@ -27,7 +27,7 @@ jobs:
         with:
           enable-cache: true
 
-      - name: install
+      - name: Install dependencies
         run: uv sync --python ${{ matrix.python-version }} --group linting --all-extras
 
       - uses: pre-commit/action@v3.0.1
@@ -41,12 +41,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup uv
-      uses: astral-sh/setup-uv@v3
+    - uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
 
-    - name: install dependencies
+    - name: Install dependencies
       # Unlike the docs build, we don't use mkdocs_material-insiders
       # Because the secret for accessing the library is not accessible from forks, but we still want to run
       # this job on public CI runs.
@@ -67,7 +66,7 @@ jobs:
     - run: uv run mkdocs build
 
   test-memray:
-    name: test memray
+    name: Test memray
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -79,11 +78,11 @@ jobs:
       - name: install deps
         run: uv sync --python 3.12 --group testing-extra
 
-      - name: test
+      - name: Run tests
         run: uv run pytest --ignore=tests/mypy/ --ignore=tests/test_docs.py --memray
 
   test:
-    name: test ${{ matrix.os }} / ${{ matrix.python-version }}
+    name: Test ${{ matrix.os }} / ${{ matrix.python-version }}
     strategy:
       fail-fast: false
       matrix:
@@ -123,19 +122,18 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup uv
-      uses: astral-sh/setup-uv@v3
+    - uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
 
-    - name: install deps
-      run: uv sync
+    - name: Install dependencies
+      run: uv sync --extra timezone
 
     - run: 'uv run python -c "import pydantic.version; print(pydantic.version.version_info())"'
 
     - run: mkdir coverage
 
-    - name: test without deps
+    - name: Test without email-validator
       # speed up by skipping this step on pypy
       if: "!startsWith(matrix.python-version, 'pypy')"
       run: make test
@@ -143,16 +141,16 @@ jobs:
         COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}-without-deps
         CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-without-deps
 
-    - name: install extra deps
+    - name: Install extra dependencies
       run: uv sync --group testing-extra --all-extras
 
-    - name: test with deps
+    - name: Test with all extra dependencies
       run: make test
       env:
         COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}-with-deps
         CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-with-deps
 
-    - name: store coverage files
+    - name: Store coverage files
       uses: actions/upload-artifact@v4
       with:
         name: coverage-${{ matrix.os }}-${{ matrix.python-version }}
@@ -162,7 +160,7 @@ jobs:
   test-fastapi:
     # If some tests start failing due to out-of-date schemas/validation errors/etc.,
     # update the `tests/test_fastapi.sh` script to exclude tests that have known-acceptable failures.
-    name: test fastapi
+    name: Test FastAPI
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -172,21 +170,21 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: test
+      - name: Run tests
         run: make test-fastapi
 
   test-plugin:
-    name: test pydantic plugin
+    name: Test Pydantic plugin
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
       - uses: astral-sh/setup-uv@v3
 
-      - name: install deps
+      - name: Install dependencies
         run: uv sync --python 3.12
 
-      - name: install example plugin
+      - name: Install example plugin
         run: uv pip install ./tests/plugin
 
       - run: uv run pytest tests/plugin
@@ -219,27 +217,26 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup uv
-      uses: astral-sh/setup-uv@v3
+    - uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
 
-    - name: install deps
+    - name: Install dependencies
       run: uv sync --python ${{ matrix.python-version }} --group typechecking --all-extras
 
-    - name: install mypy
+    - name: Install mypy
       if: steps.cache.outputs.cache-hit != 'true'
-      run: uv pip install 'mypy==${{ matrix.mypy-version }}.*'
+      run: uv pip install 'mypy==${{ matrix.mypy-version }}'
 
     - run: mkdir coverage
 
-    - name: run mypy tests
+    - name: Run mypy tests
       run: uv run coverage run -m pytest tests/mypy --test-mypy
       env:
         COVERAGE_FILE: coverage/.coverage.linux-py${{ matrix.python-version }}-mypy${{ matrix.mypy-version }}
         CONTEXT: linux-py${{ matrix.python-version }}-mypy${{ matrix.mypy-version }}
 
-    - name: store coverage files
+    - name: Store coverage files
       uses: actions/upload-artifact@v4
       with:
         name: coverage-${{ matrix.python-version }}-mypy${{ matrix.mypy-version }}
@@ -252,25 +249,17 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: install node for Pyright
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-
     - uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
 
-    - name: install deps
+    - name: Install dependencies
       run: uv sync --python 3.12 --group typechecking
 
-    - name: install Pyright
-      run: npm install -g pyright@1.1.384  # keep this in sync with .pre-commit-config.yaml
-
-    - name: run typechecking integration tests (Pyright)
+    - name: Run typechecking integration tests (Pyright)
       run: make test-typechecking-pyright
 
-    - name: run typechecking integration tests (Mypy)
+    - name: Run typechecking integration tests (Mypy)
       run: make test-typechecking-mypy
 
   coverage-combine:
@@ -284,7 +273,7 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: get coverage files
+      - name: Get coverage files
         uses: actions/download-artifact@v4
         with:
           merge-multiple: true
@@ -305,7 +294,7 @@ jobs:
           path: .coverage
           include-hidden-files: true
 
-      - name: Store coverage html
+      - name: Store coverage HTML
         uses: actions/upload-artifact@v4
         with:
           name: coverage-html
@@ -341,7 +330,7 @@ jobs:
           path: python-coverage-comment-action.txt
 
   test-typing-extensions:
-    name: test typing-extensions (`main` branch) on Python ${{ matrix.python-version }}
+    name: Test typing-extensions (`main` branch) on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -354,18 +343,17 @@ jobs:
       with:
         enable-cache: true
 
-    - name: install deps
+    - name: Install dependencies
       run: uv sync --python ${{ matrix.python-version }}
 
-    - name: install typing-extensions
+    - name: Install typing-extensions
       run: uv pip install 'typing-extensions @ git+https://github.com/python/typing_extensions.git'
 
-    - name: test
+    - name: Run tests
       run: make test
 
   # https://github.com/marketplace/actions/alls-green
   check:  # This job does nothing and is only used for the branch protection
-
     if: always()
 
     outputs:
@@ -404,21 +392,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: set up python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      - name: install
+      - name: Install 'build' library
         run: pip install -U build
 
-      - name: check version
+      - name: Check version
         id: check-tag
         uses: samuelcolvin/check-python-version@v4.1
         with:
           version_file_path: pydantic/version.py
 
-      - name: build
+      - name: Build library
         run: python -m build
 
       - name: Upload package to PyPI
