--- a/.github/workflows/docs-update.yml
+++ b/.github/workflows/docs-update.yml
@@ -41,7 +41,7 @@ jobs:
           enable-cache: true
 
       - name: Install dependencies
-        run: uv sync --python 3.12 --group testing-extra
+        run: uv sync --python 3.12 --group testing-extra --all-extras
 
       - run: 'uv run python -c "import pydantic.version; print(pydantic.version.version_info())"'
 
