--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ requires-python = '>=3.8'
 dependencies = [
     'typing-extensions>=4.12.2',
     'annotated-types>=0.6.0',
-    'pydantic-core==2.27.0',
+    "pydantic-core @ git+https://github.com/pydantic/pydantic-core.git@6472887b3ad3e865e494b46efb66a71e87ceb1cf"
 ]
 dynamic = ['version', 'readme']
 
