--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -26,10 +26,41 @@ jobs:
       # Using this action is still necessary for CodSpeed to work:
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: "3.12"
+
+      - id: core-version
+        name: resolve pydantic-core tag
+        run: |
+          echo core-ref=$(python -c "
+          import re
+          import tomllib
+
+          pyproject_toml = tomllib.loads(open('pyproject.toml').read())
+          core = next(d for d in pyproject_toml['dependecies'] if d.startswith('pydantic-core'))
+
+          if (result := re.search(r'==(.+)', core)) is not None:
+            print(f'v{result.group(1)}')
+          elif (result := re.search(r'@ git\+https://github\.com/pydantic/pydantic-core\.git@(.+)', core)) is not None:
+            print(result.group(1))
+          else:
+            raise RuntimeError('Could not resolve pydantic-core ref')
+          ") >> $GITHUB_OUTPUT
 
       - name: install deps
         run: uv sync --python 3.12 --group testing-extra --extra email --frozen
+
+      - name: checkout pydantic-core
+        uses: actions/checkout@v4
+        with:
+          repository: pydantic/pydantic-core
+          ref: ${{ steps.core-version.outputs.core-ref }}
+          path: pydantic-core
+
+      - name: install pydantic-core with profiling symbols
+        run: uv run --python 3.12 make build-pgo
+        working-directory: pydantic-core
+        env:
+          CARGO_PROFILE_RELEASE_DEBUG: "line-tables-only"
 
       - name: Run CodSpeed benchmarks
         uses: CodSpeedHQ/action@v3
